Closed
Bug 866664
Opened 12 years ago
Closed 12 years ago
Intermittent media/test/test_referer.html | application crashed [@ PL_DHashTableOperate | ... | mozilla::WMFDecoder::IsEnabled()] (" Assertion failure: (*(uint32_t*)(table->entryStore + ((uint32_t)1 << (32 - (table)->hashShift)) * table->entrySize)) > 0")
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: emorley, Assigned: cpearce)
Details
(Keywords: assertion, crash, intermittent-failure)
Crash Data
Attachments
(1 file)
3.41 KB,
patch
|
padenot
:
review+
|
Details | Diff | Splinter Review |
WINNT 6.2 mozilla-inbound debug test mochitest-1 on 2013-04-29 02:49:06 PDT for push 082445b83eba
slave: t-w864-ix-024
https://tbpl.mozilla.org/php/getParsedLog.php?id=22356069&tree=Mozilla-Inbound
{
03:20:19 INFO - 205757 INFO TEST-START | /tests/content/media/test/test_referer.html
03:20:19 INFO - ++DOMWINDOW == 21 (170546E0) [serial = 4422] [outer = 09C6F2A8]
03:20:19 INFO - 205758 INFO TEST-PASS | /tests/content/media/test/test_referer.html | check referer is sent with media request
03:20:19 INFO - Assertion failure: (*(uint32_t*)(table->entryStore + ((uint32_t)1 << (32 - (table)->hashShift)) * table->entrySize)) > 0, at e:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/obj-firefox/xpcom/build/pldhash.cpp:668
03:20:19 INFO - 205759 INFO TEST-PASS | /tests/content/media/test/test_referer.html | check referer is sent with media request
03:20:19 INFO - 205760 INFO TEST-PASS | /tests/content/media/test/test_referer.html | check referer is sent with media request
03:20:19 INFO - 205761 INFO TEST-PASS | /tests/content/media/test/test_referer.html | check referer is sent with media request
03:20:22 WARNING - TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_referer.html | Exited with code -2147483645 during test run
03:20:22 INFO - INFO | automation.py | Application ran for: 0:28:24.355000
03:20:22 INFO - INFO | zombiecheck | Reading PID log: c:\users\cltbld~1.t-w\appdata\local\temp\tmpkddyqlpidlog
03:20:22 INFO - ==> process 1316 launched child process 1800
03:20:22 INFO - ==> process 1316 launched child process 1624
03:20:22 INFO - ==> process 1316 launched child process 3352
03:20:22 INFO - INFO | zombiecheck | Checking for orphan process with PID: 1800
03:20:22 INFO - INFO | zombiecheck | Checking for orphan process with PID: 1624
03:20:22 INFO - INFO | zombiecheck | Checking for orphan process with PID: 3352
03:20:30 WARNING - PROCESS-CRASH | /tests/content/media/test/test_referer.html | application crashed [@ PL_DHashTableOperate]
03:20:30 INFO - Crash dump filename: c:\users\cltbld~1.t-w\appdata\local\temp\tmpkxf0sf\minidumps\78e0892e-5ba8-4042-aa9d-90ad0f8687bb.dmp
03:20:30 INFO - Operating system: Windows NT
03:20:30 INFO - 6.2.9200
03:20:30 INFO - CPU: x86
03:20:30 INFO - GenuineIntel family 6 model 30 stepping 5
03:20:30 INFO - 8 CPUs
03:20:30 INFO - Crash reason: EXCEPTION_BREAKPOINT
03:20:30 INFO - Crash address: 0x72baf977
03:20:30 INFO - Thread 71 (crashed)
03:20:30 INFO - 0 xul.dll!PL_DHashTableOperate [pldhash.cpp:082445b83eba : 668 + 0x38]
03:20:30 INFO - eip = 0x72baf977 esp = 0x43faf904 ebp = 0x43faf914 ebx = 0x5fc8c1e2
03:20:30 INFO - esi = 0x00c56410 edi = 0x739bf718 eax = 0x00000000 ecx = 0x4b165c97
03:20:30 INFO - edx = 0x706be4d8 efl = 0x00000212
03:20:30 INFO - Found by: given as instruction pointer in context
03:20:30 INFO - 1 xul.dll!pref_HashTableLookup(void const *) [prefapi.cpp:082445b83eba : 724 + 0xe]
03:20:30 INFO - eip = 0x71809a7f esp = 0x43faf91c ebp = 0x43faf920
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 2 xul.dll!PREF_GetBoolPref [prefapi.cpp:082445b83eba : 541 + 0xc]
03:20:30 INFO - eip = 0x7180a361 esp = 0x43faf928 ebp = 0x43faf930
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 3 xul.dll!mozilla::Preferences::GetBool(char const *,bool *) [Preferences.cpp:082445b83eba : 1171 + 0xc]
03:20:30 INFO - eip = 0x7180d6f2 esp = 0x43faf938 ebp = 0x43faf948
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 4 xul.dll!mozilla::WMFDecoder::IsEnabled() [WMFDecoder.cpp:082445b83eba : 121 + 0x1d]
03:20:30 INFO - eip = 0x721611e0 esp = 0x43faf950 ebp = 0x43faf95c
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 5 xul.dll!mozilla::WMFDecoder::IsMP3Supported() [WMFDecoder.cpp:082445b83eba : 28 + 0x4]
03:20:30 INFO - eip = 0x72161155 esp = 0x43faf964 ebp = 0x43faf96c
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 6 xul.dll!mozilla::GetSupportedAudioCodecs [WMFReader.cpp:082445b83eba : 397 + 0x4]
03:20:30 INFO - eip = 0x721618fd esp = 0x43faf974 ebp = 0x43faf980
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 7 xul.dll!mozilla::WMFReader::ConfigureAudioDecoder() [WMFReader.cpp:082445b83eba : 426 + 0xc]
03:20:30 INFO - eip = 0x72162b67 esp = 0x43faf988 ebp = 0x43faf9ac
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 8 xul.dll!mozilla::WMFReader::ReadMetadata(mozilla::VideoInfo *,nsDataHashtable<nsCStringHashKey,nsCString> * *) [WMFReader.cpp:082445b83eba : 482 + 0x6]
03:20:30 INFO - eip = 0x72162e6d esp = 0x43faf9b4 ebp = 0x43faf9d0
03:20:30 INFO - Found by: call frame info
03:20:30 INFO - 9 xul.dll!mozilla::MediaDecoderStateMachine::DecodeMetadata() [MediaDecoderStateMachine.cpp:082445b83eba : 1799 + 0x19]
}
Comment 1•12 years ago
|
||
pref_HashTableLookup is not in the skiplist (see https://github.com/mozilla/socorro/blob/master/socorro/processor/signature_utilities.py).
There's no space between const and *.
Crash Signature: [@ PL_DHashTableOperate | pref_HashTableLookup(void const *) | PREF_GetBoolPref | mozilla::Preferences::GetBool(char const *,bool *) | mozilla::WMFDecoder::IsEnabled()] → [@ PL_DHashTableOperate | pref_HashTableLookup(void const*)]
Comment 2•12 years ago
|
||
Ha, off-main-thread pref service usage.
What is this skip list stuff about?
Flags: needinfo?(scoobidiver)
Reporter | ||
Comment 3•12 years ago
|
||
(In reply to Scoobidiver from comment #1)
> pref_HashTableLookup is not in the skiplist
Yeah it was more that we have several off main thread pref accesses at the moment, so I was trying to differentiate (though happy to keep the differentiation to the summary only if that works better with Sorocco). Also, the signatures I paste are directly from the Breakpad log dump - ideally we wouldn't have to keep on tweaking them. Any way we can get Sorocco to use the Breakpad format (or vice versa)?
Comment 4•12 years ago
|
||
(In reply to Paul Adenot (:padenot) from comment #2)
> What is this skip list stuff about?
It's about the connection of this bug to crash stats in case it happens for real.
(In reply to Ed Morley [:edmorley UTC+1] from comment #3)
> Any way we can get Sorocco to use the Breakpad format (or vice versa)?
I think Breakpad should use the Socorro format. The contrary would totally break the connection between Socorro and Bugzilla.
Flags: needinfo?(scoobidiver)
Reporter | ||
Comment 5•12 years ago
|
||
(In reply to Scoobidiver from comment #4)
> I think Breakpad should use the Socorro format. The contrary would totally
> break the connection between Socorro and Bugzilla.
Or I guess we could make the regex used in the connection more resilient.
Assignee | ||
Comment 6•12 years ago
|
||
Store return value of WMFDecoder::IsMP3Supported() when WMFReader is created (on main thread) and lookup that on the decode thread instead of calling WMFDecoder::IsMP3Supported() again on the decode thread.
Updated•12 years ago
|
Attachment #743365 -
Flags: review?(paul) → review+
Assignee | ||
Comment 7•12 years ago
|
||
Comment 8•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•