Bug 866664 - Don't call WMFDecoder::IsMP3Enabled() off the main thread. r=padenot